update portage config, ralates to #3
resulting @system is now less slow, IO wait is between 1 and 33 now

--- a/root/etc/portage/make.conf
+++ b/root/etc/portage/make.conf
@@ -6,12 +6,13 @@ HOSTCC=x86_64-pc-linux-gnu-gcc
 
 ROOT=/usr/${CHOST}/
 
-ACCEPT_KEYWORDS="arm64 ~arm64"
+#ACCEPT_KEYWORDS="arm64 ~arm64"
 
 USE="${ARCH} -pam"
 
-#-mfpu=neon-fp-armv8
-CFLAGS="-mcpu=cortex-a53 -O2 -pipe -fomit-frame-pointer"
+#-mtune=cortex-a53 -mfpu=neon-fp-armv8
+# TODO  switch to -mtune=native to crosscompile gcc
+CFLAGS="-mtune=cortex-a53 -O2 -pipe -fomit-frame-pointer"
 CXXFLAGS="${CFLAGS}"
 
 FEATURES="-collision-protect sandbox buildpkg noman noinfo nodoc"
